<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/editTextDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextDangKy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/Spaper"
        android:textColor="#00BCD4"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextPhoneNumberPrefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/theme"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:ems="5"
        android:inputType="phone"
        android:text="+84"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPhoneNumberSuffix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/theme"
        app:layout_constraintStart_toEndOf="@+id/editTextPhoneNumberPrefix"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="phone"
        android:text="12345678"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumberPrefix"
        app:layout_constraintStart_toEndOf="@+id/textViewUsername"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/user_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        app:layout_constraintStart_toEndOf="@+id/textViewPassword"
        android:ems="10"
        android:layout_marginStart="50dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/mainColor"
        android:background="@drawable/custom_button3"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumberPrefix"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/user_name1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/password1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/xac_nhan"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/loi_nhac1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/loi_nhac1"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/loi_nhac1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_button3"
        android:text="@string/dang_nhap"
        android:textAllCaps="false"
        android:textColor="#FFF8F8"
        android:textSize="20sp" />

</androidx.constraintlayout.widget.ConstraintLayout>