<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_back4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_back1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:paddingTop="10dp"
            android:paddingEnd="48dp"
            android:text="@string/che_do"
            android:textAlignment="center"
            android:textSize="24sp">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/on"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="60dp"
            android:layout_height="60dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/off"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="60dp"
            android:layout_height="60dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/he_thong"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="60dp"
            android:layout_height="60dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

    </LinearLayout>
</LinearLayout>