<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_appbar_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:liftOnScroll="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Tự động phát video"
            app:titleCentered="true"
            app:titleTextAppearance="@style/font_normal"
            app:navigationIcon="?attr/homeAsUpIndicator"
            >

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <View
        android:id="@+id/divider11"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="67dp"
        app:layout_constraintTop_toBottomOf="@+id/top_appbar_video"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/divider11"
        tools:layout_editor_absoluteX="0dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Khi_dung_wifi"
            app:titleCentered="true"
            app:titleTextAppearance="@style/font_normal"
            app:navigationIcon="?attr/homeAsUpIndicator"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Chi_khi"
            app:titleCentered="true"
            app:titleTextAppearance="@style/font_normal"
            app:navigationIcon="?attr/homeAsUpIndicator"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Khong_tu_dong_phat"
            app:titleCentered="true"
            app:titleTextAppearance="@style/font_normal"
            app:navigationIcon="?attr/homeAsUpIndicator"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>